确定用聊天室来试验Libev

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,5 +6,5 @@ set(CMAKE_CXX_STANDARD 11)
 include_directories(include)
 link_directories(lib)
 
-set(SOURCE_FILES main.cpp Example.cpp Example.h)
+set(SOURCE_FILES main.cpp easylogging++.cc easylogging++.h Client.cpp Client.h ChatRoom.cpp ChatRoom.h)
 add_executable(UseLibev ${SOURCE_FILES})
